# CLI-trigrams-parser

./: CMakeLists.txt  README.md
include/: calculate_trigrams_amount.h  longest_common_substring.h  utils.h
src/: calculate_trigrams_amount.cpp  longest_common_substring.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
